--- a/Providers/Providers.csproj
+++ b/Providers/Providers.csproj
@@ -47,6 +47,7 @@
     <Compile Include="HttpProvider.cs" />
     <Compile Include="LocationProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimilarityProvider.cs" />
     <Compile Include="WikiProvider.cs" />
   </ItemGroup>
   <ItemGroup>
